# llm_for_sql

./: .env  README.md  pyproject.toml
agent_components/: document_rag_tool.py  main.py  sql_query_engine.py  sql_query_tool.py  tools_agent.py
app_server/: app.py
data/: db_schema.txt  sqlite_llm_dummy.db
notebooks/: custom_agent.ipynb  multichains.ipynb  rag_pinecone.ipynb  sql_experimentation.ipynb  sql_rag_agent.ipynb
